--- a/core/components/cityselect/docs/changelog.txt
+++ b/core/components/cityselect/docs/changelog.txt
@@ -2,6 +2,10 @@ Changelog for cityselect.
 
 cityselect 0.0.2
 ==============
+- refactoring
+
+cityselect 0.0.2
+==============
 - add Sypex Geo API
 
 cityselect 0.0.1
