- refactoring - capability with php 5.3 - update Sypex Geo date (2014.07.22)

--- a/core/components/cityselect/docs/changelog.txt
+++ b/core/components/cityselect/docs/changelog.txt
@@ -1,5 +1,14 @@
 Changelog for cityselect.
 
+cityselect 0.0.5
+==============
+- capability with php 5.3
+- update Sypex Geo date (2014.07.22)
+
+cityselect 0.0.4
+==============
+- refactoring
+
 cityselect 0.0.3
 ==============
 - refactoring
